--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10644,3 +10644,20 @@ a.text-dark:focus {
   }
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+div.box {
+  padding: 50px;
+}
+
+header,
+footer {
+  padding: 30px;
+  text-align: center;
+  height: 100px;
+}
+
